--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a {
   color: #ffffff;
 }
 
+h3 {
+  font-size: 1.125rem;
+}
+
 ol,
 li {
   list-style: none;
@@ -369,6 +373,10 @@ header .header__container .header__menu .header__menu__button {
   cursor: pointer;
   font-size: 0;
 }
+header .header__container .header__menu .header__menu__button:focus-within {
+  border: 1px solid;
+  padding: 3px;
+}
 header .header__container .header__menu .header__menu__button:focus {
   outline: none;
 }
@@ -498,7 +506,7 @@ section.game-list .game-list-container .game-list-container__games .game-list__c
 }
 section.game-list .game-list-container .game-list-container__games .game-list__card .game-list__card-container {
   display: flex;
-  gap: 1.2rem;
+  gap: 0.5rem;
   flex-direction: column;
   justify-content: center;
   margin-inline: 0.8rem;
@@ -510,14 +518,15 @@ section.game-list .game-list-container .game-list-container__games .game-list__c
 }
 section.game-list .game-list-container .game-list-container__games .game-list__card .game-list__card-container .game-list__card-title-genre-container .game-list__card__title {
   font-size: 1.125rem;
+  line-height: 1.4;
 }
 section.game-list .game-list-container .game-list-container__games .game-list__card .game-list__card-container .game-list__card-title-genre-container .game-list__card__genre {
   color: rgba(255, 255, 255, 0.65);
-  font-size: 0.9rem;
+  font-size: 0.96rem;
 }
 section.game-list .game-list-container .game-list-container__games .game-list__card .game-list__card-container .game-list__card__os__price-container {
   background: #324157;
-  background: rgba(50, 65, 87, 0.55);
+  background: rgba(50, 65, 87, 0.4);
   padding: 0.55rem 0.85rem;
   border-radius: 0.3rem;
   display: flex;
