Add info comments to js code

--- a/style.scss
+++ b/style.scss
@@ -33,9 +33,9 @@ $border-lg: 0.4em;
 // Gradient
 $page-bg: linear-gradient(
   90deg,
-  rgba(26, 27, 31, 1) 0%,
-  rgba(12, 12, 20, 1) 48%,
-  rgba(26, 27, 31, 1) 100%
+  rgb(3 5 10) 0%,
+  rgb(15, 17, 26) 50%,
+  rgb(3 5 10) 100%
 );
 
 $header-bg: linear-gradient(
