--- a/style.css
+++ b/style.css
@@ -294,7 +294,10 @@ nav.show ul {
 nav.show ul a.close-nav {
   background-color: #324157;
   padding: 0.5rem;
-  border: 1px solid #ffffff;
+  margin-inline: auto;
+  display: block;
+  text-align: center;
+  width: 30%;
 }
 nav.show ul li {
   padding: 1rem 0;
