--- a/style.scss
+++ b/style.scss
@@ -456,6 +456,7 @@ header {
         padding: 0;
         cursor: pointer;
         font-size: 0;
+        z-index: 9999999;
         &:focus-within {
           border: 1px solid;
           padding: 3px;
