--- a/style.scss
+++ b/style.scss
@@ -355,7 +355,6 @@ nav.show {
   font-size: $font-md;
   padding: $space-200;
   width: 65%;
-  height: 32.5rem;
   ul {
     margin-top: 3rem;
     display: flex;
@@ -483,6 +482,7 @@ section.tag-btns {
   width: $project-width;
   margin-inline: auto;
   cursor: pointer;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   .tag-btn {
     display: flex;
     width: 100%;
@@ -558,7 +558,6 @@ section.game-list {
       .more-arrow {
         background: #252f40;
         border-radius: $border-sm;
-        width: 2rem;
         width: 1.25rem;
         aspect-ratio: 1/1.4;
         display: grid;
@@ -594,7 +593,6 @@ section.game-list {
         border-radius: $border-sm;
         cursor: pointer;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.22);
-
         .game-list__card__img {
           width: 50%;
           aspect-ratio: 21/9;
@@ -603,10 +601,11 @@ section.game-list {
         .game-list__card-container {
           display: flex;
           gap: 0.5rem;
+          padding-block: 0.6rem;
           flex-direction: column;
           justify-content: center;
           margin-inline: $card-padding;
-          width: 100%;
+          flex: 1;
           .game-list__card-title-genre-container {
             display: flex;
             flex-direction: column;
@@ -780,5 +779,15 @@ footer {
     font-size: $font-lg;
     margin-bottom: 2rem;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .game-list__card {
+    display: flex;
+    flex-direction: column;
+  }
+  .game-list__card__img {
+    width: 100% !important;
   }
 }
